<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    android:padding="@dimen/normal_padding"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/hexaResultLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.Chip
                style="@style/MyChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gry"
                android:onClick="onSelectedChip"
                android:text="@string/hexa" />

            <TextView
                android:id="@+id/hexaResult"
                style="@style/MyChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/decemalResultLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hexaResultLinear">

            <com.google.android.material.chip.Chip
                style="@style/MyChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gry"
                android:onClick="onSelectedChip"
                android:text="@string/decemal"

                />

            <TextView
                android:id="@+id/decemalResult"
                style="@style/MyChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/octalResultLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/decemalResultLinear">

            <com.google.android.material.chip.Chip
                style="@style/MyChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gry"
                android:onClick="onSelectedChip"
                android:text="@string/octal"

                />

            <TextView
                android:id="@+id/octalResult"
                style="@style/MyChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/binaryResultLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/octalResultLinear">

            <com.google.android.material.chip.Chip
                style="@style/MyChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gry"
                android:onClick="onSelectedChip"
                android:text="@string/binary"

                />

            <TextView
                android:id="@+id/binaryResult"
                style="@style/MyChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/inputNumber"
        style="@style/TextStyle.SystemNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text=""
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toConstraint" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/buttonsFirstRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                style="@style/MyButton.DeleteButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickDeleteButton"
                />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/_1" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/_2"

                />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/_3"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsSecondtRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonsFirstRow">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/_4"

                />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/_5"

                />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/_6"

                />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/_7"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsthirdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonsSecondtRow">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/_8"

                />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/_9"

                />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/a"

                />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/b"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsFourthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonsthirdRow">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/c"

                />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/d"

                />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/e"

                />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.NumberButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/f"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsFifthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonsFourthRow">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.ZeroButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickNumber"
                android:text="@string/zero" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyButton.EqualButton"
                android:layout_width="@dimen/rectangle_button_width"
                android:layout_height="@dimen/button_height"
                android:onClick="onClickEqualButton"
                android:text="@string/equal" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
